Adding map and json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div class="form-group">
+  <md-input-container>
+  <input mdInput id="autocomplete" placeholder="Enter your address" #inputText >
+  </md-input-container>
+</div>
+<div class="MapWidget">
+  <div class="MapWidget-view" #mapContainer></div>
+</div>
