--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,8 @@
 </div>
 <div class="MapWidget">
   <div class="MapWidget-view" #mapContainer></div>
+  <div *ngIf="gotData == true">
+    <h1>TEST</h1>
+  </div>
 </div>
+
